Bug 1719035 [wpt PR 29572] - Address flakiness in import-css-module-basic.html, a=testonly
Automatic update from web-platform-tests
Address flakiness in import-css-module-basic.html

The logs from the failures are not helpful in diagnosing the issue,
and I'm unable to reproduce any failure locally.

My best guess is that the issue is related to the test's use of 5
iframes that are injected in async_tests. There's probably some
strange timing issue that happens if things happen to load in a
particular order.

This change attempts to address the flakiness by simplifying the test.
4 of the iframes are removed and the modules are just loaded in order
at the top level instead.

The 5th test remains in an iframe because the test is supposed to
cause an error; this one is converted to promise_test.

Bug: 1225913
Change-Id: If1870af360ba6812689c03e87ce4d21d91faabe1
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3003700
Commit-Queue: Kouhei Ueno <kouheichromium.org>
Reviewed-by: Kouhei Ueno <kouheichromium.org>
Cr-Commit-Position: refs/heads/master{#898417}

--

wpt-commits: 07a56dce8775820d3a42d4ac94beb39428f6a585
wpt-pr: 29572

UltraBlame original commit: 78ddc0dc774cbfe8d9550e0a7ca596ae8bb90a7c

--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/css-module/import-css-module-basic.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/css-module/import-css-module-basic.html
@@ -48,64 +48,210 @@ head
 body
 >
 <
+div
+id
+=
+"
+test
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
+div
+id
+=
+"
+test2
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
+div
+id
+=
+"
+test3
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
+div
+id
+=
+"
+test3b
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
+div
+id
+=
+"
+test4
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
+div
+id
+=
+"
+test4b
+"
+>
+I
+am
+a
+test
+div
+.
+<
+/
+div
+>
+<
 script
 >
-async_test
-(
-function
-(
-test
-)
-{
-const
-iframe
-=
-document
+window
 .
-createElement
-(
-"
-iframe
-"
-)
+errorCount
+=
+0
 ;
-iframe
+window
 .
-src
+onerror
+=
+(
+errorMsg
+url
+lineNumber
+column
+errorObj
+)
+=
+>
+{
+window
+.
+errorCount
++
++
+;
+}
+;
+<
+/
+script
+>
+<
+script
+type
 =
 "
+module
+"
+onerror
+=
+"
+unreachable
+(
+)
+"
+>
+import
+sheet
+from
+"
+.
+/
 resources
 /
-css
--
-module
--
 basic
--
-iframe
 .
-html
+css
 "
+assert
+{
+type
+:
+"
+css
+"
+}
 ;
-iframe
-.
-onload
-=
 test
-.
-step_func_done
 (
-function
 (
 )
+=
+>
 {
+document
+.
+adoptedStyleSheets
+=
+[
+.
+.
+.
+document
+.
+adoptedStyleSheets
+sheet
+]
+;
 assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
@@ -135,18 +281,6 @@ succeed
 )
 ;
 }
-)
-;
-document
-.
-body
-.
-appendChild
-(
-iframe
-)
-;
-}
 "
 A
 CSS
@@ -156,12 +290,54 @@ load
 "
 )
 ;
-async_test
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+onerror
+=
+"
+unreachable
 (
-function
-(
-test
 )
+"
+>
+import
+sheet
+from
+"
+.
+/
+resources
+/
+basic
+-
+large
+.
+css
+"
+assert
+{
+type
+:
+"
+css
+"
+}
+;
+test
+(
+(
+)
+=
+>
 {
 /
 /
@@ -194,63 +370,31 @@ older
 /
 versions
 .
-const
-iframe
-=
 document
 .
-createElement
-(
-"
-iframe
-"
-)
-;
-iframe
-.
-src
+adoptedStyleSheets
 =
-"
-resources
-/
-css
--
-module
--
-basic
--
-large
--
-iframe
+[
 .
-html
-"
+.
+.
+document
+.
+adoptedStyleSheets
+sheet
+]
 ;
-iframe
-.
-onload
-=
-test
-.
-step_func_done
-(
-function
-(
-)
-{
 assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
 '
 #
-test
+test2
 '
 )
 )
@@ -274,18 +418,6 @@ succeed
 )
 ;
 }
-)
-;
-document
-.
-body
-.
-appendChild
-(
-iframe
-)
-;
-}
 "
 A
 large
@@ -296,77 +428,80 @@ load
 "
 )
 ;
-async_test
-(
-function
-(
-test
-)
-{
-const
-iframe
-=
-document
-.
-createElement
-(
-"
-iframe
-"
-)
-;
-iframe
-.
-src
+<
+/
+script
+>
+<
+script
+type
 =
 "
+module
+"
+onerror
+=
+"
+unreachable
+(
+)
+"
+>
+import
+sheet
+from
+"
+.
+/
 resources
 /
-css
--
-module
--
-at
+bad
 -
 import
--
-iframe
 .
-html
+css
 "
-;
-iframe
-.
-onload
-=
-test
-.
-step_func_done
-(
-function
-(
-)
+assert
 {
-assert_equals
-(
-iframe
-.
-contentDocument
-.
-load_error
-undefined
-)
+type
+:
+"
+css
+"
+}
 ;
-assert_equals
+test
 (
-iframe
-.
-contentDocument
+(
+)
+=
+>
+{
+document
 .
 adoptedStyleSheets
+=
 [
-0
+.
+.
+.
+document
+.
+adoptedStyleSheets
+sheet
 ]
+;
+assert_equals
+(
+window
+.
+errorCount
+0
+)
+;
+assert_equals
+(
+sheet
 .
 cssRules
 .
@@ -381,28 +516,27 @@ rule
 "
 )
 ;
-assert_not_equals
+assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
 '
 #
-test
+test3b
 '
 )
 )
 .
 backgroundColor
 "
-rgb
+rgba
 (
-255
+0
+0
 0
 0
 )
@@ -421,15 +555,13 @@ assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
 '
 #
-test2
+test3
 '
 )
 )
@@ -455,18 +587,6 @@ applied
 )
 ;
 }
-)
-;
-document
-.
-body
-.
-appendChild
-(
-iframe
-)
-;
-}
 "
 An
 import
@@ -484,71 +604,78 @@ exception
 "
 )
 ;
-async_test
-(
-function
-(
-test
-)
-{
-const
-iframe
-=
-document
-.
-createElement
-(
-"
-iframe
-"
-)
-;
-iframe
-.
-src
+<
+/
+script
+>
+<
+script
+type
 =
 "
+module
+"
+onerror
+=
+"
+unreachable
+(
+)
+"
+>
+import
+sheet
+from
+"
+.
+/
 resources
 /
 malformed
--
-iframe
 .
-html
+css
 "
-;
-iframe
-.
-onload
-=
-test
-.
-step_func_done
-(
-function
-(
-)
+assert
 {
-assert_equals
-(
-iframe
-.
-contentDocument
-.
-load_error
-undefined
-)
+type
+:
+"
+css
+"
+}
 ;
-assert_equals
+test
 (
-iframe
-.
-contentDocument
+(
+)
+=
+>
+{
+document
 .
 adoptedStyleSheets
+=
 [
-0
+.
+.
+.
+document
+.
+adoptedStyleSheets
+sheet
 ]
+;
+assert_equals
+(
+window
+.
+errorCount
+0
+)
+;
+assert_equals
+(
+sheet
 .
 cssRules
 .
@@ -574,28 +701,27 @@ parsed
 "
 )
 ;
-assert_not_equals
+assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
 '
 #
-test
+test4
 '
 )
 )
 .
 backgroundColor
 "
-rgb
+rgba
 (
-255
+0
+0
 0
 0
 )
@@ -615,15 +741,13 @@ assert_equals
 (
 getComputedStyle
 (
-iframe
-.
-contentDocument
+document
 .
 querySelector
 (
 '
 #
-test2
+test4b
 '
 )
 )
@@ -653,18 +777,6 @@ applied
 )
 ;
 }
-)
-;
-document
-.
-body
-.
-appendChild
-(
-iframe
-)
-;
-}
 "
 A
 parse
@@ -684,7 +796,19 @@ module
 "
 )
 ;
-async_test
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+>
+promise_test
 (
 function
 (
@@ -723,17 +847,37 @@ iframe
 html
 "
 ;
+return
+new
+Promise
+(
+resolve
+=
+>
+{
 iframe
 .
 onload
 =
-test
+resolve
+;
+document
 .
-step_func_done
+body
+.
+appendChild
 (
-function
-(
+iframe
 )
+;
+}
+)
+.
+then
+(
+event
+=
+>
 {
 assert_equals
 (
@@ -759,7 +903,7 @@ error
 "
 )
 ;
-assert_not_equals
+assert_equals
 (
 getComputedStyle
 (
@@ -778,9 +922,10 @@ test
 .
 backgroundColor
 "
-rgb
+rgba
 (
-255
+0
+0
 0
 0
 )
@@ -801,15 +946,6 @@ error
 )
 ;
 }
-)
-;
-document
-.
-body
-.
-appendChild
-(
-iframe
 )
 ;
 }
