Bug 1719409 [wpt PR 29586] - [mathml] Use Ahem font in mathml/relations/css-styling/display-2.html, a=testonly
Automatic update from web-platform-tests
[mathml] Use Ahem font in mathml/relations/css-styling/display-2.html

That way we ensure that the font is the same in all platforms,
and we just need a generic -expected.txt file.

Change-Id: Ia5751e5de15c007619968f47f7015df49480d049
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3009216
Reviewed-by: Frédéric Wang <fwangigalia.com>
Commit-Queue: Manuel Rego <regoigalia.com>
Cr-Commit-Position: refs/heads/master{#899017}

--

wpt-commits: b96fcd14c19db25a4c132a9d8306dd925237259d
wpt-pr: 29586

UltraBlame original commit: af3d5f56749b9870f68ccbf73fcf0da047175010

--- a/testing/web-platform/tests/mathml/relations/css-styling/display-2.html
+++ b/testing/web-platform/tests/mathml/relations/css-styling/display-2.html
@@ -172,6 +172,51 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+mathml
+/
+support
+/
+fonts
+.
+js
+"
+>
+<
+/
+script
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+fonts
+/
+ahem
+.
+css
+"
+/
+>
+<
 style
 >
 mfrac
@@ -1552,7 +1597,21 @@ addEventListener
 "
 load
 "
+(
+)
+=
+>
+{
+loadAllFonts
+(
+)
+.
+then
+(
 runTests
+)
+;
+}
 )
 ;
 function
@@ -1688,6 +1747,13 @@ div
 style
 =
 "
+font
+:
+20px
+/
+1
+Ahem
+;
 position
 :
 absolute
