Bug 1718089 [wpt PR 29480] - [Sanitizer API] Adapt new string API. Also adapt tests., a=testonly
Automatic update from web-platform-tests
[Sanitizer API] Adapt new string API. Also adapt tests.

Implement Sanitizer.sanitizeFor.
Drive-by fix: Ensure secure context.

Both name, exact edge and error conditions for these methods are still
in discussion, so this will likely require follow-on work. But the
basics we're implementing here allow us to experiment, and will also
likely hold.

Ref: https://github.com/WICG/sanitizer-api/pull/99
Bug: 1221153
Change-Id: I9c7f74f71e07f5fc1a172ae8f7f6181178f3c8d9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2969103
Commit-Queue: Daniel Vogelheim <vogelheimchromium.org>
Reviewed-by: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#899085}

--

wpt-commits: 7bf0a3380a7a1a553dacde126cce91ba224f66e2
wpt-pr: 29480

UltraBlame original commit: 6748bdc27dd07139ca789cb47d3acba38e9cf007

--- a/testing/web-platform/tests/sanitizer-api/sanitizer-sanitize.https.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-sanitize.https.tentative.html
@@ -90,15 +90,140 @@ div
 ;
 d
 .
-appendChild
+replaceChildren
 (
+.
+.
+.
 fragment
+.
+cloneNode
+(
+true
+)
+.
+childNodes
 )
 ;
 return
 d
 .
 innerHTML
+;
+}
+function
+getFragment
+(
+markup
+)
+{
+const
+d
+=
+document
+.
+createElement
+(
+"
+div
+"
+)
+;
+d
+.
+innerHTML
+=
+markup
+;
+let
+f
+=
+document
+.
+createDocumentFragment
+(
+)
+;
+f
+.
+replaceChildren
+(
+.
+.
+.
+d
+.
+childNodes
+)
+;
+return
+f
+;
+}
+function
+getDoc
+(
+markup
+)
+{
+return
+new
+DOMParser
+(
+)
+.
+parseFromString
+(
+markup
+"
+text
+/
+html
+"
+)
+;
+}
+function
+assert_node_equals
+(
+node1
+node2
+)
+{
+assert_true
+(
+node1
+instanceof
+Node
+&
+&
+node1
+.
+isEqualNode
+(
+node2
+)
+Node
+[
+{
+getString
+(
+node1
+)
+}
+]
+=
+=
+Node
+[
+{
+getString
+(
+node2
+)
+}
+]
+)
 ;
 }
 test
@@ -113,8 +238,6 @@ s
 new
 Sanitizer
 (
-{
-}
 )
 ;
 assert_throws_js
@@ -132,11 +255,11 @@ sanitize
 ;
 }
 "
-SanitizerAPI
+Sanitizer
+.
 sanitize
-function
-without
-argument
+(
+)
 should
 throw
 an
@@ -199,83 +322,149 @@ null
 "
 )
 ;
-testcases
-.
-forEach
-(
-c
+const
+probe_string
 =
+<
+a
+href
+=
+"
+about
+:
+blank
+"
 >
+hello
+<
+/
+a
+>
+<
+script
+>
+cons
++
+ole
+.
+log
+(
+"
+world
+!
+"
+)
+;
+<
++
+/
+script
+>
+;
 test
 (
 t
 =
 >
 {
-let
-s
+const
+sanitized
 =
 new
 Sanitizer
 (
-c
-.
-config_input
 )
-;
-fragment
-=
-s
 .
 sanitize
 (
-c
-.
-value
+getFragment
+(
+probe_string
+)
 )
 ;
-assert_true
+const
+expected
+=
+getFragment
 (
-fragment
-instanceof
-DocumentFragment
+probe_string
+.
+substr
+(
+0
+31
+)
 )
 ;
-assert_equals
+assert_node_equals
 (
-getString
-(
-fragment
-)
-c
-.
-result
+expected
+sanitized
 )
 ;
 }
 "
-SanitizerAPI
-with
-config
-:
-"
-+
-c
+Sanitizer
 .
-message
-+
-"
-sanitize
-from
-string
-function
-for
-"
-+
-c
-.
-message
+sanitze
+(
+DocumentFragment
 )
+"
+)
+;
+test
+(
+t
+=
+>
+{
+const
+sanitized
+=
+new
+Sanitizer
+(
+)
+.
+sanitize
+(
+getDoc
+(
+probe_string
+)
+)
+;
+const
+expected
+=
+getFragment
+(
+probe_string
+.
+substr
+(
+0
+31
+)
+)
+;
+assert_node_equals
+(
+expected
+sanitized
+)
+;
+}
+"
+Sanitizer
+.
+sanitze
+(
+Document
+)
+"
 )
 ;
 async_test
@@ -298,6 +487,8 @@ s
 .
 sanitize
 (
+getFragment
+(
 "
 <
 img
@@ -313,6 +504,7 @@ bla
 '
 >
 "
+)
 )
 ;
 t
