Bug 1719737 [wpt PR 29614] - Use RangeError for CanvasRenderingContext2D.roundRect, a=testonly
Automatic update from web-platform-tests
Use RangeError for CanvasRenderingContext2D.roundRect

Bug: 1193694
Change-Id: Id17730a9ac6b088816221ded46648de4185fca14
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3015806
Reviewed-by: Justin Novosad <junovchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#899819}

--

wpt-commits: 7e84c9df47d55601226081cce9f003355546a305
wpt-pr: 29614

UltraBlame original commit: 6b5d4b0e570f22daa995f7337e5651ea7d5ed32c

--- a/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.negative.html
+++ b/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.negative.html
@@ -276,14 +276,13 @@ canvas
 ctx
 )
 {
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -298,18 +297,16 @@ roundRect
 1
 ]
 )
-;
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -325,14 +322,7 @@ roundRect
 1
 ]
 )
-;
 }
-)
-;
-t
-.
-done
-(
 )
 ;
 }
