--- a/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.none.html
+++ b/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.none.html
@@ -168,7 +168,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -265,7 +265,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -284,14 +284,13 @@ canvas
 ctx
 )
 {
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -304,7 +303,6 @@ roundRect
 [
 ]
 )
-;
 }
 )
 ;
