--- a/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.toomany.html
+++ b/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.toomany.html
@@ -286,14 +286,13 @@ canvas
 ctx
 )
 {
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -311,7 +310,6 @@ roundRect
 0
 ]
 )
-;
 }
 )
 ;
