--- a/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.negative.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.negative.html
@@ -225,14 +225,13 @@ getContext
 '
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -247,18 +246,16 @@ roundRect
 1
 ]
 )
-;
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -274,7 +271,6 @@ roundRect
 1
 ]
 )
-;
 }
 )
 ;
