--- a/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.none.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.none.html
@@ -136,7 +136,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -162,7 +162,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -233,14 +233,13 @@ getContext
 '
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-"
-INDEX_SIZE_ERR
-"
-function
+RangeError
 (
 )
+=
+>
 {
 ctx
 .
@@ -253,7 +252,6 @@ roundRect
 [
 ]
 )
-;
 }
 )
 ;
