Bug 1719181 [wpt PR 29578] - Test other form of explicit stretching, a=testonly
Automatic update from web-platform-tests
Test other form of explicit stretching (#29578)

--

wpt-commits: 38956485d2cf73844f2e1fec7baa89bb8e3cfc32
wpt-pr: 29578

UltraBlame original commit: c4f0971aa4bdc6003357749bf741607f8c959daf

--- a/testing/web-platform/tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-018.html
+++ b/testing/web-platform/tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-018.html
@@ -256,7 +256,7 @@ template
 -
 rows
 :
-100px
+50px
 ;
 "
 >
@@ -267,7 +267,7 @@ style
 "
 height
 :
-100px
+50px
 ;
 aspect
 -
@@ -282,6 +282,75 @@ justify
 self
 :
 stretch
+;
+background
+:
+green
+;
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+style
+=
+"
+display
+:
+grid
+;
+grid
+-
+template
+-
+columns
+:
+100px
+;
+grid
+-
+template
+-
+rows
+:
+50px
+;
+justify
+-
+items
+:
+stretch
+"
+>
+<
+div
+style
+=
+"
+height
+:
+50px
+;
+aspect
+-
+ratio
+:
+1
+/
+2
+;
+justify
+-
+self
+:
+auto
 ;
 background
 :
