Bug 1719139 [wpt PR 29575] - Reland "[COEP] Fix flaky reporting tests for COEP:require-corp.", a=testonly
Automatic update from web-platform-tests
Reland "[COEP] Fix flaky reporting tests for COEP:require-corp."

This is a reland of 93e7378c0b1270c5973d9b63af77caa8a7fb41d5

Original change's description:
> [COEP] Fix flaky reporting tests for COEP:require-corp.
>
> Fixed reporting-navigation and reporting-subresource-corp tests.
>
> Bug: 1218825, 1091665
> Change-Id: I7aaf7e1436373a5a6cd0a8f1d947957b31822cbc
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2980597
> Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
> Commit-Queue: Yifan Luo <lyfchromium.org>
> Cr-Commit-Position: refs/heads/master{#898086}

Bug: 1218825, 1091665
Change-Id: I580b13b18b6f14d909dd6fa9fbaa20a7e803e9f2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3005344
Reviewed-by: Yifan Luo <lyfchromium.org>
Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
Commit-Queue: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#900404}

--

wpt-commits: 2160b7ee5fb13d5bd76b180d54b8a3f6322c8ea9
wpt-pr: 29575

UltraBlame original commit: d4e6e7c531c07e25b9ffec8c998fd3865675342e

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-navigation.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-navigation.https.html
@@ -81,6 +81,26 @@ script
 >
 <
 script
+src
+=
+"
+.
+/
+credentialless
+/
+resources
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 >
 const
 {
@@ -602,6 +622,7 @@ function
 observeReports
 (
 global
+expected_count
 )
 {
 const
@@ -609,6 +630,27 @@ reports
 =
 [
 ]
+;
+const
+receivedEveryReports
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+if
+(
+expected_count
+=
+=
+0
+)
+resolve
+(
+)
 ;
 const
 observer
@@ -644,6 +686,19 @@ toJSON
 )
 ;
 }
+if
+(
+expected_count
+<
+=
+reports
+.
+length
+)
+resolve
+(
+)
+;
 }
 )
 ;
@@ -653,15 +708,24 @@ observe
 (
 )
 ;
+}
+)
+;
 /
 /
 Wait
-5000ms
-for
-reports
+5000
+ms
+more
 to
-settle
+catch
+additionnal
+unexpected
+reports
 .
+await
+receivedEveryReports
+;
 await
 new
 Promise
@@ -1167,6 +1231,11 @@ observeReports
 parent
 .
 contentWindow
+testcase
+.
+reports
+.
+length
 )
 .
 then
