--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-subresource-corp.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-subresource-corp.https.html
@@ -312,25 +312,130 @@ require
 corp
 )
 ;
+async
 function
-wait
+observeReports
 (
-ms
+global
+expected_count
 )
 {
-return
+const
+reports
+=
+[
+]
+;
+const
+receivedEveryReports
+=
 new
 Promise
 (
 resolve
 =
 >
+{
+if
+(
+expected_count
+=
+=
+0
+)
+resolve
+(
+)
+;
+const
+observer
+=
+new
+global
+.
+ReportingObserver
+(
+(
+rs
+)
+=
+>
+{
+for
+(
+const
+r
+of
+rs
+)
+{
+reports
+.
+push
+(
+r
+.
+toJSON
+(
+)
+)
+;
+}
+if
+(
+expected_count
+<
+=
+reports
+.
+length
+)
+resolve
+(
+)
+;
+}
+)
+;
+observer
+.
+observe
+(
+)
+;
+}
+)
+;
+await
+receivedEveryReports
+;
+/
+/
+Wait
+500ms
+more
+to
+catch
+additionnal
+unexpected
+reports
+.
+await
+new
+Promise
+(
+r
+=
+>
 step_timeout
 (
-resolve
-ms
+r
+500
 )
 )
+;
+return
+reports
 ;
 }
 function
@@ -411,14 +516,9 @@ fetchInFrame
 t
 frameUrl
 url
+expected_count
 )
 {
-const
-reports
-=
-[
-]
-;
 const
 frame
 =
@@ -444,51 +544,6 @@ remove
 )
 ;
 const
-observer
-=
-new
-frame
-.
-contentWindow
-.
-ReportingObserver
-(
-(
-rs
-)
-=
->
-{
-for
-(
-const
-report
-of
-rs
-)
-{
-reports
-.
-push
-(
-report
-.
-toJSON
-(
-)
-)
-;
-}
-}
-)
-;
-observer
-.
-observe
-(
-)
-;
-const
 init
 =
 {
@@ -507,6 +562,17 @@ no
 store
 '
 }
+;
+let
+future_reports
+=
+observeReports
+(
+frame
+.
+contentWindow
+expected_count
+)
 ;
 await
 frame
@@ -529,23 +595,9 @@ catch
 }
 )
 ;
-/
-/
-Wait
-200ms
-for
-reports
-to
-settle
-.
-await
-wait
-(
-200
-)
-;
 return
-reports
+await
+future_reports
 ;
 }
 async
@@ -875,6 +927,7 @@ async
 (
 test
 url
+expected_count
 )
 =
 >
@@ -886,6 +939,7 @@ fetchInFrame
 test
 FRAME_URL
 url
+expected_count
 )
 ;
 }
@@ -906,6 +960,7 @@ async
 (
 test
 url
+expected_count
 )
 =
 >
@@ -979,6 +1034,7 @@ async
 (
 test
 url
+expected_count
 )
 =
 >
@@ -1039,6 +1095,7 @@ async
 (
 test
 url
+expected_count
 )
 =
 >
@@ -1178,6 +1235,7 @@ async
 (
 test
 url
+expected_count
 )
 =
 >
@@ -1276,6 +1334,7 @@ fetchInFrame
 test
 REPORTING_FRAME_URL
 url
+expected_count
 )
 ;
 }
@@ -1306,6 +1365,9 @@ plain
 .
 txt
 '
+expected_count
+:
+0
 check
 :
 (
@@ -1316,14 +1378,6 @@ contextUrl
 =
 >
 {
-assert_equals
-(
-reports
-.
-length
-0
-)
-;
 }
 }
 {
@@ -1356,6 +1410,9 @@ origin
 corp
 .
 txt
+expected_count
+:
+0
 check
 :
 (
@@ -1366,14 +1423,6 @@ contextUrl
 =
 >
 {
-assert_equals
-(
-reports
-.
-length
-0
-)
-;
 }
 }
 {
@@ -1398,6 +1447,9 @@ text
 plain
 .
 txt
+expected_count
+:
+2
 check
 :
 (
@@ -1408,14 +1460,6 @@ url
 =
 >
 {
-assert_equals
-(
-reports
-.
-length
-2
-)
-;
 checkReport
 (
 reports
@@ -1485,6 +1529,9 @@ plain
 .
 txt
 )
+expected_count
+:
+2
 check
 :
 (
@@ -1495,14 +1542,6 @@ url
 =
 >
 {
-assert_equals
-(
-reports
-.
-length
-2
-)
-;
 checkReport
 (
 reports
@@ -1574,6 +1613,19 @@ t
 testcase
 .
 url
+testcase
+.
+expected_count
+)
+;
+assert_equals
+(
+reports
+.
+length
+testcase
+.
+expected_count
 )
 ;
 testcase
@@ -1627,12 +1679,6 @@ t
 >
 {
 const
-reports
-=
-[
-]
-;
-const
 frame
 =
 await
@@ -1654,51 +1700,6 @@ frame
 remove
 (
 )
-)
-;
-const
-observer
-=
-new
-frame
-.
-contentWindow
-.
-ReportingObserver
-(
-(
-rs
-)
-=
->
-{
-for
-(
-const
-report
-of
-rs
-)
-{
-reports
-.
-push
-(
-report
-.
-toJSON
-(
-)
-)
-;
-}
-}
-)
-;
-observer
-.
-observe
-(
 )
 ;
 const
@@ -1734,6 +1735,17 @@ src
 =
 url
 ;
+const
+future_reports
+=
+observeReports
+(
+frame
+.
+contentWindow
+2
+)
+;
 frame
 .
 contentDocument
@@ -1745,20 +1757,11 @@ appendChild
 script
 )
 ;
-/
-/
-Wait
-200ms
-for
+const
 reports
-to
-settle
-.
+=
 await
-wait
-(
-200
-)
+future_reports
 ;
 assert_equals
 (
